--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -128,18 +128,23 @@
         </activity>
         <activity
             android:name=".app.ImageTargets.ShowPartGallery"
-            android:screenOrientation="landscape"
-            android:label="@string/title_activity_show_part_gallery" >
+            android:label="@string/title_activity_show_part_gallery"
+            android:screenOrientation="landscape" >
         </activity>
         <activity
             android:name=".app.ImageTargets.GameLobby"
-            android:screenOrientation="landscape"
-            android:label="@string/title_activity_game_lobby" >
+            android:label="@string/title_activity_game_lobby"
+            android:screenOrientation="landscape" >
         </activity>
         <activity
             android:name=".app.ImageTargets.GamePlay"
-            android:screenOrientation="landscape"
-            android:label="@string/title_activity_game_play" >
+            android:label="@string/title_activity_game_play"
+            android:screenOrientation="landscape" >
+        </activity>
+        <activity
+            android:name=".app.ImageTargets.Tutorial"
+            android:label="@string/title_activity_tutorial"
+            android:screenOrientation="landscape">
         </activity>
     </application>
 
